# basic-agent

./: .gitignore  config.json  main.py  pyproject.toml  test_dev_mode.py  test_safety.py
src/: __init__.py  agent.py  config.py  dev_mode.py  exceptions.py  memory.py  models.py
src/tools/: __init__.py  base.py  file_operations.py  terminal.py  web_search.py
tests/: test_agent_functionality.py  test_basic-agent.py  test_new_architecture.py
